# lexica-doc

./: Cargo.toml  README.md  index.html  install.ps1  install.sh  vercel.json
scripts/: generate_baselines.py
src/: app.rs  canvas.rs  document.rs  layout.rs  lib.rs  main.rs
src/app/: actions.rs  canvas_state.rs  chrome.rs  history.rs  mod.rs  palette.rs  recent_files.rs
src/canvas/: editor_input.rs  mod.rs  page_layout.rs  palette.rs  table.rs
src/document/: docx.rs  markdown.rs  mod.rs  text.rs
src/grammar/: download.rs  mod.rs  process.rs  task.rs
src/ui/: mod.rs  squiggles.rs
tests/: parser_tests.rs
