[package]
name = "wors"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui = "0.34.1"
image = { version = "0.25.8", default-features = false, features = ["bmp", "gif", "jpeg", "png"] }
pulldown-cmark = "0.13.0"
quick-xml = "0.39.2"
rfd = "0.17.2"
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }
