[package]
name = "wors"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22.1"
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui = "0.34.1"
image = { version = "0.25.8", default-features = false, features = ["bmp", "gif", "jpeg", "png"] }
printpdf = { version = "0.9.1", default-features = false, features = ["html"] }
pulldown-cmark = "0.13.0"
quick-xml = "0.39.2"
reqwest = { version = "0.12", features = ["json"] }
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
whatlang = "0.16"
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
walkdir = "2"
