[package]
name = "wors"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22.1"
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui = "0.34.1"
image = { version = "0.25.8", default-features = false, features = ["bmp", "gif", "jpeg", "png"] }
printpdf = { version = "0.9.1", default-features = false, features = ["html"] }
pulldown-cmark = "0.13.0"
quick-xml = "0.39.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whatlang = "0.16"
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.17.2"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "HtmlCanvasElement", "Window"] }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
walkdir = "2"
